--- a/frontend/app/src/components/Text.css
+++ b/frontend/app/src/components/Text.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-around;
   padding-bottom: 10em;
+  margin-top: 280px;
 }
 
 .container * {
@@ -27,7 +28,7 @@
   border-radius: 10px;
   margin-bottom: 2em;
   font-size: 1.5em;
-  color: #ffff00;
+  color: white;
   resize: none;
   filter: drop-shadow(3px 2px rgba(0, 0, 0, 0.5));
 }
